--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
   },
   "engines": {
     "node": "4.4.x",
@@ -23,6 +23,7 @@
     "pg": "^4.4.6",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.19.3",
+    "sequelize-cli": "^2.4.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
